--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 	<head>
-		<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-		<title>MVC With Burgers!</title>
+		<title>Burgers</title>
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	</head>
 	<body>
 		{{{ body }}}
